--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
     "mysql": "^2.13.0",
     "mysql2": "^1.3.3",
     "passport": "^0.3.2",
